<resources>
    <string name="app_name">nlcatering</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_caterer_main">CatererMainActivity</string>
    <string name="load">Loading...</string>
    <string name="languagechoose">Choose Your Language</string>
    <string name="logintypehedding">Looking for a Caterer for Your Party or Company Lunch?</string>
    <string name="customertype">I M LOOKING FOR A CATERER</string>
    <string name="caterertype">I AM A CATERER</string>
    <string name="usernamename">Username</string>
    <string name="passward">Password</string>
    <string name="cnfpassward"> Confirm Password</string>
    <string name="showpassward">Show Password</string>
    <string name="forgpassward">Forgot Password</string>
    <string name="signin">Sign In</string>
    <string name="notregister">Not Register?</string>
    <string name="register">Register</string>
    <string name="enquires">Enquiries</string>
    <string name="bidding">Bidding</string>
    <string name="order">Order</string>
    <string name="resetpass">Reset Passward</string>
    <string name="logout">Log Out</string>
    <string name="logintypraction">Login Type</string>
    <string name="languagechange">Change Language</string>
    <string name="noofplate">No. Of Plate</string>
    <string name="bidstatus">Bid Status :</string>
    <string name="action">Action</string>
    <string name="customername">Customer Name</string>
    <string name="pincode">Pin Code</string>
    <string name="orderdetails">Address</string>
    <string name="actioncaterertype">Caterer Type</string>
    <string name="dishtype">Dish Type</string>
    <string name="requestforquote">Request for a quote</string>
    <string name="placeorder">Place Order</string>
    <string name="totalprice">Total Amount :</string>
    <string name="makepayment">Make Payment</string>
    <string name="noofpersion">Number of Person :</string>
    <string name="submit">Submit</string>
    <string name="companyname">Company Name</string>
    <string name="needhelp"> Need help? </string>
    <string name="whatswishes">What are your wishes?</string>
    <string name="registerheading">Enter Your Contact Details</string>
    <string name="contact">Contact No.</string>
    <string name="contact1">Contact No.-1</string>
    <string name="contact2">Contact No.-2</string>
    <string name="emailaddress">Email Address</string>
    <string name="city">City</string>
    <string name="selectcity">Select City</string>
    <string name="website">Website</string>
    <string name="workarea">Work Area</string>
    <string name="alreadyregister">Already Registered ?</string>
    <string name="placeofperformance">Place of performance</string>
    <string name="quotsubmit">Submit</string>
    <string name="registerform">Registration Form</string>
    <string name="custname">Name</string>
    <string name="enteryouremail">Enter Your Register Email id</string>
    <string name="changepass">Change Password</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="cnfpass">Confirm Password</string>
    <string name="chooselang">Choose  Your  Language</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing emailcompletions.</string>
    <string name="langselection">Change Language</string>
    <string name="company_name">Company Name :</string>
    <string name="orderid">Order ID</string>
    <string name="termAndCondHeading">Terms and Conditions</string>
    <string name="termAndCond_SubHeading">NLCATERING is a catering ordering site.</string>
    <string name="termAndCond_SubHeading_content"> The head office is located at Bamendaweg 48B in Dordrecht. NLCATERING is registered in the trade register.
        This document applies to the consumer customers of NLCATERING.nl.Any correspondence can be sent to info@nlcatering.nl or to the address above.</string>
    <string name="termhed1">1. Definition</string>
    <string name="ternhed1_content">In the general terms and conditions the following terms have the following meaning:
        NLCATERING, customers and catering companies.
        Customers are consumers who want to receive a catering offer. Catering companies are companies that offer catering.</string>
    <string name="termhed2">2. Offers</string>
    <string name="termhed2_content">Offers from catering companies are valid for 10 days after the offer.</string>
    <string name="termhed3">3. Delivery</string>
    <string name="termhed3_content">In case of business clients the snacks are delivered to the reception if it is present. NLCATERING is not responsible for the internal delivery. If the snacks can not be delivered to the delivery address, the driver will try to deliver the snacks to a nearby address. If this is not possible, then the snacks are taken away again and a pick-up message is put on the bus, which describes that you can pick up the order on the same day at a pick-up address. Failure to pick up the order will not release you from your payment obligation under any circumstances. In this case, the client remains responsible for all costs incurred.</string>
    <string name="termhed4">4. Payment</string>
    <string name="termhed4_content">Via the NLCATERING website you must submit your order. To confirm the order, the client receives a message confirming the order. An invoice is added to this message which must be paid in consultation with and to the delivery body. You can also choose to pay at the door upon delivery or online with Ideal.</string>
    <string name="termhed5">5. Liability</string>
    <string name="termhed5_content">NLCATERING can not be held liable. NLCATERING works together with caterers throughout the Netherlands. They are the executing party, confirm the order, prepare the dishes and deliver them. They also invoice you. You are also responsible for the correct delivery of the delivery and billing address. After the client has submitted an order online, the client receives a confirmation by email; the order, the delivery address, the delivery date, the delivery time and the costs. What is described in this confirmation is what the client conforms to.</string>
    <string name="termhed6">6. Cancellation</string>
    <string name="termhed6_content">Prior to the delivery date, the client can cancel. Up to 7 days prior to the delivery date cancellation is free of charge. For cancellations that come in between 7 and 3 days prior to the delivery date, 25% cancellation costs with a minimum of € 25.00 will be charged. Cancellations shorter than 3 days prior to the delivery date will be charged in full. To cancel an order, the client must contact the NLCATERING customer service. The cancellation becomes final after NLCATERING has confirmed this to you in writing / by mail.</string>
    <string name="termhed7">Privacy statement</string>
    <string name="termhed7_content">NLCATERING is very careful with its customer information and will never make this information available to third parties. NLCATERING adheres to the rules stipulated in the Personal Data Protection Act (WBP), as well as to the new European directives and the amendment of the WBP.</string>
    <string name="termhed8">8. Sales and Delivery Terms</string>
    <string name="termhed8_1">8.1 Handling personal data</string>
    <string name="termhed_1_content">The data will only be used as explained in these terms and conditions. NLCATERING undertakes not to sell, pass on or lease the collected data to third parties for commercial purposes. We do, however, pass on your address information to the caterer where your order will be processed, in order to facilitate the delivery. Your e-mail address is only used internally by NLCATERING and is passed on to the caterer. Exception to the above are requests from the national government, for example in the case of a police investigation.</string>
    <string name="termhed8_2">8.2 Relationship to caterers and other third parties</string>
    <string name="termhed8_2_content">If you order from NLCATERING, we will pass the order to the caterer in your area. Should it be clear to us that for some reason we can not deliver, we will immediately inform you about this. NLCATERING is only intermediary in this operation. The actual supply agreement is concluded under the general conditions of the caterer in question. NLCATERING is not a party to this agreement, as we can not influence the individual practice of that moment of a caterer. The responsibility of NLCATERING is limited to the process of transferring the order to the caterer. The caterer himself is responsible for keeping the receiving equipment in good condition.</string>
    <string name="termhed9">9. Complaints</string>
    <string name="termhed9_content">handling Caterers affiliated with NLCATERING are responsible for the correct fulfillment of the agreements with the customer. NLCATERING ensures that this proceeds in accordance with what is published on this site. NLCATERING mediates in disputes between caterers and the customer, in order to find a solution to a problem that occurs. You can report complaints to info@nlcatering.nl. Every complaint will be handled by us.</string>
    <string name="termhed10">10. Cookies</string>
    <string name="termhed10_content">NLCATERING uses a technique called "Cookies" to make the site as user-friendly as possible. The Cookie that NLCATERING uses is a number, so we can help you the next time. For example, your zip code is already filled in, you can also save your users information. This ensures that you can place your order faster. Cookies are also used to remember which products you have in your shopping cart. This is necessary for the technical functioning of the website. No personal information is sent over the internet by means of the cookie, it is only a (coded) number.</string>
    <string name="termhed11">11. Intellectual property right</string>
    <string name="termhed11_content">NLCATERING is a protected brand name. It is not allowed to copy, modify, translate and / or publish any part of the website without the permission of NLCATERING. If you are interested in using part of our site for any purpose, please contact info@nlcatering.nl and submit an application.
        NLCATERING, as well as this agreement are subject to Dutch law.</string>
    <string name="termhed12">12. Allergy legislation</string>
    <string name="termhed12_content">Since December 13, 2014, the Allergen Legislation is in force. NLCATERING functions as an intermediary between end customer and caterer. The assortment published on NLCATERING is compiled and prepared by each individual caterer. The use of basic ingredients is basically prescribed, but the caterer has the freedom to choose for his own supplier / brands. NLCATERING is not responsible for the ingredients used for eating. If you have allergens allergy, please contact NLCATERING and we ask the caterer which allergens are used for the relevant food.</string>
</resources>