<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cateresEnquiry"
            android:icon="@drawable/enquiry__white"
            android:title="@string/enquires" />
        <item
            android:id="@+id/cateresOrder"
            android:icon="@drawable/order_icon_white"
            android:title="@string/order" />
        <item
            android:id="@+id/cusrResetpass"
            android:icon="@drawable/reset_password_white"
            android:iconTint="@color/white"
            android:title="@string/resetpass" />

        <item
            android:id="@+id/langselecton"
            android:icon="@drawable/change_password_white"
            android:title="@string/langselection" />


        <item
            android:id="@+id/cateresLogout"
            android:icon="@drawable/logout_icon_white"
            android:title="@string/logout" />
    </group>


</menu>






