<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customerlogin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CustomerActivity.CustomerCredentials.CustomerLogin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/squreshape_edit_customer"
            android:fontFamily="@string/title_activity_caterer_main"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="15sp"
            android:textStyle="bold">

            <EditText
                android:id="@+id/customerUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@null"
                android:hint="@string/usernamename"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_5sdp"
                android:textSize="15dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/squreshape_edit_customer"
            android:fontFamily="@string/title_activity_caterer_main"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:textSize="15sp"
            android:textStyle="bold">

            <EditText
                android:id="@+id/customerPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@null"
                android:hint="@string/passward"
                android:inputType="textPassword"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                tools:ignore="HardcodedText" />


        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/showPassward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/caterercolour"
                android:layout_weight="1"
                android:text="@string/showpassward"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:gravity="center|end"
                android:text="@string/forgpassward"
                android:textColor="@color/white" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/squrebuttonfor_customer"
            android:text="@string/signin"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notregister"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/regstetext"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>